examples/test/testpolicy6482.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6482
  namespace: namespace238
spec:
  podSelector:
    matchLabels:
      key8: value43
      key19: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value13
          key36: value46
          key26: value36
      podSelector:
        matchLabels:
          key22: value23
          key30: value0
